--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -22,5 +22,17 @@
         <argument
             android:name="uid"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_listFragment_to_userSettingFragment"
+            app:destination="@id/userSettingFragment" />
+    </fragment>
+    <fragment
+
+        android:id="@+id/userSettingFragment"
+        android:name="com.onix.internship.survay.ui.userSetting.UserSettingFragment"
+        android:label="UserSettingFragment" >
+        <argument
+            android:name="uid"
+            app:argType="integer" />
     </fragment>
 </navigation>
