--- a/app/src/main/res/layout/fragment_test_run.xml
+++ b/app/src/main/res/layout/fragment_test_run.xml
@@ -18,7 +18,7 @@
             android:id="@+id/stubLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
+            android:text="@string/test_run"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
