--- a/app/src/main/res/layout/test_item_view.xml
+++ b/app/src/main/res/layout/test_item_view.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="user"
-            type="com.onix.internship.survay.database.test.Test"/>
+            name="test"
+            type="com.onix.internship.survay.database.test.Test" />
+
         <variable
             name="clickListener"
             type="com.onix.internship.survay.ui.list.TestListener" />
@@ -16,13 +18,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:onClick="@{() -> clickListener.onClick(user)}">
+        android:onClick="@{() -> clickListener.onClick(test)}">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:text="@{test.login}"
+            android:text="@{test.name}"
             android:textSize="36sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,10 +36,10 @@
             android:layout_height="wrap_content"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
+            android:text="@{test.description}"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name"
-            app:setFullName="@{user}"
             tools:text="test description" />
 
 
