--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -25,6 +25,12 @@
         <action
             android:id="@+id/action_listFragment_to_userSettingFragment"
             app:destination="@id/userSettingFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_testRunFragment"
+            app:destination="@id/testRunFragment" />
+        <action
+            android:id="@+id/action_listFragment_self"
+            app:destination="@id/listFragment" />
     </fragment>
     <fragment
 
@@ -33,6 +39,13 @@
         android:label="UserSettingFragment" >
         <argument
             android:name="uid"
+            app:argType="integer" />
+    </fragment>
+    <fragment
+        android:id="@+id/testRunFragment"
+        android:name="com.onix.internship.survay.ui.test.run.TestRunFragment"
+        android:label="TestRunFragment" >
+        <argument android:name="id"
             app:argType="integer" />
     </fragment>
 </navigation>
