--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -29,8 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:text="CheckBox"
-            android:checked="@{viewModel.model.check}"
-            android:onClick="@{() -> viewModel.model.tttt()}"
+            android:checked="@={viewModel.model.check}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
