--- a/app/src/main/res/layout/user_item_view.xml
+++ b/app/src/main/res/layout/user_item_view.xml
@@ -4,70 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="user"
-            type="com.onix.internship.survay.database.user.User"/>
+            type="com.onix.internship.survay.database.user.User" />
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-      >
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/login"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textSize="36sp"
-            app:layout_constraintEnd_toEndOf="@+id/role"
-            app:layout_constraintStart_toStartOf="@+id/name"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@{user.login}"
-            tools:text="storm" />
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/wrapper_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textSize="24sp"
-            app:setFullName="@{user}"
-            app:layout_constraintEnd_toStartOf="@+id/role"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login"
-            tools:text="david bur" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/role"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:textSize="24sp"
-            app:setRole="@{user}"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/name"
-            app:layout_constraintTop_toBottomOf="@+id/login"
-            tools:text="maneger" />
+            <TextView
+                android:id="@+id/login"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:text="@{user.login}"
+                android:textSize="36sp"
+                app:layout_constraintEnd_toEndOf="@+id/role"
+                app:layout_constraintStart_toStartOf="@+id/name"
+                app:layout_constraintTop_toTopOf="@id/wrapper_content"
+                tools:text="storm" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textSize="24sp"
+                app:layout_constraintEnd_toStartOf="@+id/role"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/login"
+                app:setFullName="@{user}"
+                tools:text="david bur" />
+
+            <TextView
+                android:id="@+id/role"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:textSize="24sp"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/name"
+                app:layout_constraintTop_toBottomOf="@+id/login"
+                app:role="@{user.roleEnum}"
+                tools:text="manager" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="@{() -> user.changeRole()}"
+            app:layout_constraintBottom_toBottomOf="@+id/wrapper_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/login"
-            app:viewRole="@{user}"
-            android:onClick="@{() -> user.changeRole()}"/>
+            app:layout_constraintTop_toTopOf="@+id/wrapper_content"
+            app:viewRole="@{user}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
