--- a/app/src/main/res/layout/user_item_view.xml
+++ b/app/src/main/res/layout/user_item_view.xml
@@ -61,7 +61,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/name"
                 app:layout_constraintTop_toBottomOf="@+id/login"
-                app:role="@{user.roleEnum}"
+                app:role="@{user.role}"
                 tools:text="manager" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
