dialog logout and navigation

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,14 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     >
 
-
     <item
-        android:id="@+id/role"
-        android:title="@string/roles_setting"
-        />
-
-    <item
-        android:id="@+id/pagerFragment"
+        android:id="@+id/logoutDialog"
         android:title="@string/logout"
         />
 
